# nanoworld

./: .gitignore  BUDGET.md  DECISIONS.md  README.md  conftest.py  modal_app.py  pyproject.toml  runs_manifest.schema.json
.github/workflows/: ci.yml
data/eval/: drift_curves.json
envs/: test_yam_pickplace.py  tictactoe.py  yam_pickplace.py
export/: to_browser.py
export/golden/: muzero_golden.json  muzero_weights.json  search_parity.json
export/js/: check_golden.mjs  forward.js  search.js  test_parity.mjs
nano_muzero/: README.md  baseline.py  eval.py  eval_drift.py  experiments.md  mcts.py  model.py  oracle.py  probe.py  show_replay.py  train.py
scripts/: modal_guard.py
shared/: buffer.py  export.py  log.py  nets.py  seed.py
tests/: test_envs.py  test_muzero.py  test_shared.py  test_smoke.py  test_tictactoe.py
tests/fixtures/: capstone_net.npz
